--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -2,18 +2,25 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>{% block title %}Welcome!{% endblock %}</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <title>{% block title %}Wild Series{% endblock %}</title>
+        <link rel="icon" href="{{ asset('build/Logo_popcorn.png') }}" />
+        <link rel="stylesheet" href="/build/app.css">
+        <script src="/build/app.js"></script>
         {# Run `composer require symfony/webpack-encore-bundle`
            and uncomment the following Encore helpers to start using Symfony UX #}
         {% block stylesheets %}
-            {#{{ encore_entry_link_tags('app') }}#}
+            {{ encore_entry_link_tags('app') }}
         {% endblock %}
 
         {% block javascripts %}
-            {#{{ encore_entry_script_tags('app') }}#}
+            {{ encore_entry_script_tags('app') }}
         {% endblock %}
     </head>
     <body>
+        <header>
+            {% include 'component/_navbar.html.twig' %}
+        </header>
         {% block body %}{% endblock %}
     </body>
 </html>
