--- a/templates/component/_navbar.html.twig
+++ b/templates/component/_navbar.html.twig
@@ -5,6 +5,9 @@
         <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
+                    <a class="nav-link text-light" href="{{path('category_index')}}">Categories</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link text-light" href="{{path('program_index')}}">Series</a>
                 </li>
                 <li class="nav-item">
