--- a/templates/component/_navbar.html.twig
+++ b/templates/component/_navbar.html.twig
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-dark bg-secondary">
     <div class="container-fluid">
-        <img class="logo text-center" width="150" height="140" src="{{ asset('build/Logo_popcorn.png') }}" alt="logo">
-        <a class="navbar-brand text-light" href="">Wild Series</a>
+        <a href="{{ path('app_index') }}"><img class="logo text-center" width="150" height="140" src="{{ asset('build/Logo_popcorn.png') }}" alt="logo"></a>
+        <a class="navbar-brand text-light" href="{{ path('app_index') }}">Wild Series</a>
         <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item">
