--- a/templates/program/season_show.html.twig
+++ b/templates/program/season_show.html.twig
@@ -1,4 +1,3 @@
-
 {% extends 'base.html.twig' %}
 
 {% block title %}Série #{{ program.id }}{% endblock %}
@@ -14,6 +13,7 @@
                 {% for episode in season.episodes %}
                     <h2> Episode : {{ episode.number }} - {{ episode.title }}</h2>
                     <p> {{ episode.synopsis }}</p>
+                    <a href="{{ path("program_episode_show", { programId: program.id, seasonId : season.id, episodeId : episode.id }) }}">Voir la fiche de l'épisode</a>
                     <br><br>
                 {% else %}
                     <p> Pas de saison trouvée </p>
@@ -23,7 +23,7 @@
     </div>
 
     <a href="{{ path('program_index') }}">
-        Retour à la liste des seasons
+        Retour à la liste des saisons
     </a>
 
 {% endblock %}
