--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -13,7 +13,7 @@
             <p> Saisons : </p>
             <ul>
                 {% for season in program.seasons %}
-                    <li><a href="{{ path("program_season_show", { programId: program.id, seasonId: season.id }) }}">Saison : {{ season.number }}</a></li>
+                    <li><a href="{{ path("program_season_show", { program_id: program.id, season_id: season.id  }) }}">Saison : {{ season.number }}</a></li>
                 {% else %}
                     <p> Pas de saison trouvée </p>
                 {% endfor %}
