--- a/templates/program/index.html.twig
+++ b/templates/program/index.html.twig
@@ -14,7 +14,10 @@
         Aucune série trouvée.
     {% endfor %}
 
-    <a href="{{ path('app_index') }}">
-        Retour à l'accueil
-    </a>
+    <div>
+        <a href="{{ path('program_new') }}">Ajout d'un nouveau programme</a>
+    </div>
+    <div>
+        <a href="{{ path('app_index') }}">Retour à l'accueil</a>
+    </div>
 {% endblock %}
