--- a/templates/program/new.html.twig
+++ b/templates/program/new.html.twig
@@ -9,11 +9,13 @@
         <div class="form-group py-4">
             {{ form_label(form.title) }}
             {{ form_widget(form.title) }}
+            {{ form_errors(form.title) }}
         </div>
 
         <div class="form-group py-4">
             {{ form_label(form.summary) }}
             {{ form_widget(form.summary) }}
+            {{ form_errors(form.summary) }}
         </div>
 
         <div class="form-group py-4">
