quete Many to Many

--- a/templates/component/_navbar.html.twig
+++ b/templates/component/_navbar.html.twig
@@ -11,7 +11,7 @@
                     <a class="nav-link text-light" href="{{path('program_index')}}">Series</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link text-light" href="#">Actors</a>
+                    <a class="nav-link text-light" href="{{path('actor_index')}}">Actors</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link text-light" href="#">Watchlist</a>
