--- a/templates/program/episode_show.html.twig
+++ b/templates/program/episode_show.html.twig
@@ -15,7 +15,7 @@
         </div>
     </div>
 
-    <a href="{{ path("program_season_show", { program_id: program.id, season_id: season.id  }) }}">    
+    <a href="{{ path("program_season_show", { programSlug: program.slug, seasonNumber: season.number  }) }}">
         Retour à la liste des épisodes
     </a>
 
