--- a/templates/program/season_show.html.twig
+++ b/templates/program/season_show.html.twig
@@ -13,7 +13,7 @@
                 {% for episode in season.episodes %}
                     <h2> Episode : {{ episode.number }} - {{ episode.title }}</h2>
                     <p> {{ episode.synopsis }}</p>
-                    <a href="{{ path("program_episode_show", { programId: program.id, seasonId : season.id, episodeId : episode.id }) }}">Voir la fiche de l'épisode</a>
+                    <a href="{{ path("program_episode_show", { programSlug: program.slug, seasonNumber : season.number, episodeSlug : episode.slug }) }}">Voir la fiche de l'épisode</a>
                     <br><br>
                 {% else %}
                     <p> Pas de saison trouvée </p>
