--- a/templates/program/show.html.twig
+++ b/templates/program/show.html.twig
@@ -1,5 +1,5 @@
 {% extends 'base.html.twig' %}
-{% block title %}Série #{{ program.id }}{% endblock %}
+{% block title %}{{ program.title }}{% endblock %}
 
 {% block body %}
 
@@ -13,7 +13,7 @@
             <p> Saisons : </p>
             <ul>
                 {% for season in program.seasons %}
-                    <li><a href="{{ path("program_season_show", { program_id: program.id, season_id: season.id  }) }}">Saison : {{ season.number }}</a></li>
+                    <li><a href="{{ path("program_season_show", { programSlug: program.slug, seasonNumber: season.number  }) }}">Saison : {{ season.number }}</a></li>
                 {% else %}
                     <p> Pas de saison trouvée </p>
                 {% endfor %}
